--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "golftable",
-  "version": "1.0.0",
+  "name": "reactable",
+  "version": "0.0.1",
   "description": "reactive socket i/o driven table",
   "main": "app.js",
   "scripts": {
@@ -8,12 +8,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SteFletcher/golftable.git"
+    "url": "git+https://github.com/SteFletcher/reactable.git"
   },
   "author": "stephen fletcher",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SteFletcher/golftable/issues"
+    "url": "https://github.com/SteFletcher/reactable/issues"
   },
-  "homepage": "https://github.com/SteFletcher/golftable#readme"
+  "homepage": "https://github.com/SteFletcher/reactable#readme",
+  "dependencies": {
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.4.5"
+  }
 }
