--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha test",
-    "build": "browserify -t [ babelify --presets [ react ] ] ./public/js/* -o ./site/js/bundle.js"
+    "build": "browserify -t [ babelify --presets [ react ] ] ./public/js/* -o ./site/js/bundle.js",
+    "watch": "watchify -t [ babelify --presets [ react ] ] ./public/js/* -o ./site/js/bundle.js"
   },
   "repository": {
     "type": "git",
