--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha test",
-    "build": "browserify -t [ babelify --presets [ react ] ] ./public/js/*.jsx -o ./site/js/bundle.js",
-    "watch": "watchify -t [ babelify --presets [ react ] ] ./public/js/*.jsx -o ./site/js/bundle.js"
+    "build": "browserify -t [ babelify --presets [ react ] ] ./public/app.jsx -o ./site/js/bundle.js -d",
+    "watch": "watchify -t [ babelify --presets [ react ] ] ./public/app.jsx -o ./site/js/bundle.js -d"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
   "dependencies": {
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
+    "bootstrap": "^3.3.6",
+    "express": "^4.13.4",
     "jquery": "^2.2.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6"
