--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^3.3.6",
     "express": "^4.13.4",
     "jquery": "^2.2.0",
+    "lodash": "^4.0.0",
+    "mongoose": "^4.3.7",
     "react": "^0.14.6",
     "react-dom": "^0.14.6"
   },
