--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "lodash": "^4.0.0",
     "mongoose": "^4.3.7",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
