--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.13.4",
     "jquery": "^2.2.0",
     "lodash": "^4.0.0",
+    "moment": "^2.11.1",
     "mongoose": "^4.3.7",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
