--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^0.14.6",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "restler": "~3.2.2"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
