--- a/package.json
+++ b/package.json
@@ -1,17 +1,45 @@
 {
   "name": "reactable",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
+  "description": "reactive socket i/o driven table",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "mocha test",
+    "build": "browserify -t [ babelify --presets [ react ] ] ./src/app.jsx -o ./public/js/bundle.js -d",
+    "watch": "watchify -t [ babelify --presets [ react ] ] ./src/app.jsx -o ./public/js/bundle.js -d"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SteFletcher/reactable.git"
+  },
+  "author": "stephen fletcher",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SteFletcher/reactable/issues"
+  },
+  "homepage": "https://github.com/SteFletcher/reactable#readme",
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
+    "body-parser": "^1.14.2",
+    "bootstrap": "^3.3.6",
+    "express": "^4.13.4",
+    "jquery": "^2.2.0",
+    "lodash": "^4.0.0",
+    "moment": "^2.11.1",
+    "mongoose": "^4.3.7",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
+    "socketio": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "browserify": "^13.0.0",
+    "reactify": "^1.1.1",
+    "watchify": "^3.7.0",
+    "restler": "~3.2.2",
+    "repeat": "0.0.6"
   }
 }
