--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 node_modules
 .idea/*
-<<<<<<< Updated upstream
 reactable.iml
 npm-debug.log
-=======
->>>>>>> Stashed changes
 ./public/js/bundle.js
 startApp.sh
 public/js/bundle.js
+.DS_Store
